V2 Update about.html

--- a/about.html
+++ b/about.html
@@ -4,80 +4,125 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About This Project - Future Self</title>
-    <link rel="stylesheet" href="styles.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FRDXP452X5"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-FRDXP452X5');
+      // GA will be initialized by script.js based on consent
     </script>
-    </head>
-<body>
+    <style>
+        /* Minimal CSS for specific overrides if Tailwind isn't enough */
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+        /* Add any styles from your main styles.css that are truly global and not handled by Tailwind */
+    </style>
+</head>
+<body class="bg-slate-900 text-gray-200 font-inter flex flex-col min-h-screen">
 
-    <nav class="navbar">
-        <div class="nav-container">
-             <a href="index.html" class="nav-logo"> <img src="logo.svg" alt="Future Self Logo" height="40">
-             </a>
-            <ul class="nav-menu">
-                 <li class="nav-item"><a href="index.html#testimonial-section" class="nav-link">Stories</a></li>
-                <li class="nav-item"><a href="index.html#insights-section" class="nav-link">Insights</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                 <li class="nav-item"><a href="https://forms.gle/fxrWSSNjG5sMyhdU9" target="_blank" rel="noopener noreferrer" class="nav-link">Feedback</a></li>
-                 <li class="nav-item">
-                    <a href="http://revolut.me/yonatahf89" target="_blank" rel="noopener noreferrer" class="nav-link donate-button">
-                        🌿 Support This Project
+    <nav class="bg-slate-800/80 backdrop-blur-md shadow-lg sticky top-0 z-50 border-b border-slate-700">
+        <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex items-center justify-between h-16">
+                <div class="flex items-center">
+                    <a href="index.html" class="flex-shrink-0">
+                        <img src="https://placehold.co/130x35/1a1a2e/ffffff?text=FutureSelf" alt="Future Self Logo" class="h-8 w-auto rounded">
                     </a>
-                </li>
-            </ul>
+                </div>
+                <div class="hidden md:block">
+                    <div class="ml-10 flex items-baseline space-x-4">
+                        <a href="index.html#testimonial-section" class="text-gray-300 hover:bg-slate-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Stories</a>
+                        <a href="index.html#insights-section" class="text-gray-300 hover:bg-slate-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Insights</a>
+                        <a href="index.html#recommendations-section" class="text-gray-300 hover:bg-slate-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">For You</a>
+                        <a href="about.html" class="bg-slate-700 text-white px-3 py-2 rounded-md text-sm font-medium" aria-current="page">About</a>
+                        <a href="https://forms.gle/fxrWSSNjG5sMyhdU9" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:bg-slate-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Feedback</a>
+                        <a href="http://revolut.me/yonatahf89" target="_blank" rel="noopener noreferrer" class="bg-orange-500 hover:bg-orange-600 text-slate-900 font-semibold px-4 py-2 rounded-md text-sm shadow-md transition-colors donate-button">
+                            🌿 Support This Project
+                        </a>
+                    </div>
+                </div>
+                <div class="-mr-2 flex md:hidden">
+                    <button type="button" id="mobile-menu-button" class="bg-slate-700 inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-slate-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-800 focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
+                        <span class="sr-only">Open main menu</span>
+                        <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                        </svg>
+                        <svg class="hidden h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="md:hidden hidden" id="mobile-menu">
+            <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
+                <a href="index.html#testimonial-section" class="text-gray-300 hover:bg-slate-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Stories</a>
+                <a href="index.html#insights-section" class="text-gray-300 hover:bg-slate-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Insights</a>
+                <a href="index.html#recommendations-section" class="text-gray-300 hover:bg-slate-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">For You</a>
+                <a href="about.html" class="bg-slate-700 text-white block px-3 py-2 rounded-md text-base font-medium" aria-current="page">About</a>
+                <a href="https://forms.gle/fxrWSSNjG5sMyhdU9" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:bg-slate-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Feedback</a>
+                <a href="http://revolut.me/yonatahf89" target="_blank" rel="noopener noreferrer" class="bg-orange-500 hover:bg-orange-600 text-slate-900 font-semibold block px-3 py-2 rounded-md text-base shadow-md transition-colors donate-button">
+                    🌿 Support This Project
+                </a>
+            </div>
         </div>
     </nav>
 
-    <main class="content-section about-page" style="max-width: 900px; margin: 40px auto;">
+    <main class="flex-grow container mx-auto px-4 sm:px-6 lg:px-8 py-8">
+        <div class="bg-slate-800/50 p-6 md:p-8 rounded-xl shadow-xl max-w-3xl mx-auto">
+            <h1 class="text-3xl sm:text-4xl font-bold text-center text-white mb-8">About This Project</h1>
 
-        <h1>About This Project</h1>
+            <section id="about-project" aria-labelledby="about-heading" class="mb-10">
+                <h2 id="about-heading" class="text-2xl font-semibold text-sky-300 mb-4">From Me:</h2>
+                <div class="space-y-4 text-gray-300 leading-relaxed">
+                    <p>This site is a personal offering to the Joe Dispenza community, born from my own healing journey and two years volunteering. It's a gift for my 40th, built using data science and voice processing to make testimonial insights easier to find and use.</p>
+                    <p>Consider this a 'soul project'. If it proves valuable and community support makes it feasible, I plan to expand it with deeper analysis and tools. If not, I'll adapt based on feedback.</p>
+                    <p>Donations are welcome if you find this resource helpful and want to support its future development.</p>
+                </div>
 
-        <section id="about-project" aria-labelledby="about-heading">
-            <h3>From Me:</h3>
-            <p>This site is a personal offering to the Joe Dispenza community, born from my own healing journey and two years volunteering. It's a gift for my 40th, built using data science and voice processing to make testimonial insights easier to find and use.</p>
-            <p>Consider this a 'soul project'. If it proves valuable and community support makes it feasible, I plan to expand it with deeper analysis and tools. If not, I'll adapt based on feedback.</p>
-            <p>Donations are welcome if you find this resource helpful and want to support its future development.</p>
+                <h3 class="text-xl font-semibold text-sky-400 mt-8 mb-3">The Process Behind the Scenes:</h3>
+                <ul class="list-disc list-outside space-y-2 pl-5 text-gray-300 leading-relaxed">
+                    <li><strong>Gathering Stories:</strong> It started by collecting over 300 publicly shared video testimonials from the community.</li>
+                    <li><strong>Listening Deeply:</strong> The audio from these videos was carefully processed to capture not just the words, but also key inspirational quotes, significant healing moments, and the overall sentiment being expressed.</li>
+                    <li><strong>Adding Emotional Context:</strong> Descriptive "Voice Tags" (like 🌿 Calm or 🔥 Intense) were added based on analyzing the speaker's vocal tone and energy, helping to convey the feeling behind the story.</li>
+                    <li><strong>Organizing the Data:</strong> Testimonials often mention conditions or methods using varied language. This data was cleaned and organized, grouping similar terms (e.g., different ways of describing anxiety or specific meditation types) to make searching and filtering more effective and intuitive.</li>
+                    <li><strong>Distilling Insights:</strong> The entire collection was analyzed to identify recurring themes, patterns, and statistics, which are shared in the "Healing Insights" section on the main page.</li>
+                </ul>
+            </section>
 
-            <h3>The Process Behind the Scenes:</h3>
-             <ul> <li><strong>Gathering Stories:</strong> It started by collecting over 300 publicly shared video testimonials from the community.</li>
-                <li><strong>Listening Deeply:</strong> The audio from these videos was carefully processed to capture not just the words, but also key inspirational quotes, significant healing moments, and the overall sentiment being expressed.</li>
-                <li><strong>Adding Emotional Context:</strong> Descriptive "Voice Tags" (like 🌿 Calm or 🔥 Intense) were added based on analyzing the speaker's vocal tone and energy, helping to convey the feeling behind the story.</li>
-                <li><strong>Organizing the Data:</strong> Testimonials often mention conditions or methods using varied language. This data was cleaned and organized, grouping similar terms (e.g., different ways of describing anxiety or specific meditation types) to make searching and filtering more effective and intuitive.</li>
-                <li><strong>Distilling Insights:</strong> The entire collection was analyzed to identify recurring themes, patterns, and statistics, which are shared in the "Healing Insights" section.</li>
-            </ul>
-        </section>
+            <hr class="border-slate-700 my-10">
 
-        <hr style="border-color: rgba(255, 255, 255, 0.1); margin: 40px 0;"> <section id="understanding-site" aria-labelledby="understanding-heading">
-            <h2 id="understanding-heading">Understanding the Site & Data</h2>
+            <section id="understanding-site" aria-labelledby="understanding-heading-main">
+                <h2 id="understanding-heading-main" class="text-2xl font-semibold text-sky-300 mb-4">Understanding the Site & Data</h2>
 
-            <h3>Voice Tags (e.g., 🌿 Calm, 🔥 Intense)</h3>
-            <p>These tags attempt to capture the speaker's vocal delivery style during the testimonial. They are derived automatically from analyzing the audio's tone, speed, and emotional cues, sometimes refined manually. They add an extra layer to help you connect with the feeling behind the story.</p>
+                <h3 class="text-xl font-semibold text-sky-400 mt-6 mb-3">Voice Tags (e.g., 🌿 Calm, 🔥 Intense)</h3>
+                <p class="text-gray-300 leading-relaxed mb-4">These tags attempt to capture the speaker's vocal delivery style during the testimonial. They are derived automatically from analyzing the audio's tone, speed, and emotional cues, sometimes refined manually. They add an extra layer to help you connect with the feeling behind the story.</p>
 
-            <h3>Healing Insights</h3>
-            <p>The insights shown are derived from analyzing trends and specific statements across multiple testimonials in the dataset, combined with relevant quotes and suggested actions.</p>
+                <h3 class="text-xl font-semibold text-sky-400 mt-6 mb-3">Healing Insights</h3>
+                <p class="text-gray-300 leading-relaxed mb-4">The insights shown on the main page are derived from analyzing trends and specific statements across multiple testimonials in the dataset, combined with relevant quotes and suggested actions.</p>
 
-            <p><em>Please note: This site is currently an MVP (Minimum Viable Product). Features and data analysis will evolve based on community feedback and support. Always consult healthcare professionals for medical advice.</em></p>
-        </section>
-
+                <p class="text-gray-400 italic leading-relaxed mt-6">Please note: This site is currently an MVP (Minimum Viable Product). Features and data analysis will evolve based on community feedback and support. Always consult healthcare professionals for medical advice.</p>
+            </section>
+        </div>
     </main>
 
-    <footer class="site-footer">
-         <p class="footer-links">
-            <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Use</a>
+    <footer class="bg-slate-800/50 border-t border-slate-700 mt-auto">
+        <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-6 text-center text-gray-400 text-sm">
+            <p class="footer-links">
+                <a href="privacy.html" class="hover:text-sky-400 transition-colors">Privacy Policy</a> | 
+                <a href="terms.html" class="hover:text-sky-400 transition-colors">Terms of Use</a>
             </p>
+            <p class="mt-2">&copy; <span id="current-year"></span> FutureSelf.space. All rights reserved.</p>
+        </div>
     </footer>
 
-     <div id="cookieConsentBanner" class="cookie-consent-banner">
-        <p>
-            This website uses cookies (specifically Google Analytics) to analyze traffic and improve your experience. By continuing to use this site, you acknowledge this use. Learn more in our <a href="privacy.html">Privacy Policy</a>.
-            <button id="cookieConsentAccept" class="cookie-accept-btn">Got it!</button>
-        </p>
+    <div id="cookieConsentBanner" class="fixed bottom-0 left-0 right-0 bg-slate-900/95 backdrop-blur-sm border-t border-slate-700 p-4 shadow-lg z-[1010] hidden">
+        <div class="container mx-auto flex flex-col sm:flex-row justify-between items-center gap-3">
+            <p class="text-sm text-gray-300">
+                This website uses cookies (specifically Google Analytics) to analyze traffic and improve your experience. By continuing to use this site, you acknowledge this use. Learn more in our <a href="privacy.html" class="text-sky-400 hover:underline">Privacy Policy</a>.
+            </p>
+            <button id="cookieConsentAccept" class="px-4 py-2 bg-teal-500 hover:bg-teal-600 text-white text-sm font-semibold rounded-md shadow-sm whitespace-nowrap transition-colors">Got it!</button>
+        </div>
     </div>
 
     <script src="script.js"></script>
