hotfix no rights index.html

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <a href="privacy.html" class="hover:text-sky-400 transition-colors">Privacy Policy</a> | 
                 <a href="terms.html" class="hover:text-sky-400 transition-colors">Terms of Use</a>
             </p>
-            <p class="mt-2">&copy; <span id="current-year"></span> FutureSelf.space. All rights reserved.</p>
+            <!-- <p class="mt-2">&copy; <span id="current-year"></span> FutureSelf.space. All rights reserved.</p> -->
         </div>
     </footer>
 
